components/Navigation/NextCard.module.scss
@use "/styles/lib/mixins.scss";

.next_card {
  align-items: center;
  background-color: var(--color-toolbar-background);
  border-radius: 8px;
  box-shadow: 0 1px 12px var(--color-shadow-1),
    inset 0 0 2px 0.75px var(--color-border-2),
    inset 0 0 0 0.75px var(--color-border-1);
  display: flex;
  flex: 1 0 100%;
  flex-direction: row;
  gap: 8px;
  justify-content: flex-start;
  padding: 16px 24px;
  transition: mixins.theme-transition(color, background-color, box-shadow),
    box-shadow 0.2s var(--ease-out-cubic);

  @include mixins.remove-transition;

  @include mixins.above-large {
    flex: 1 0 calc(50% - 12px);
  }

  &:is(a) {
    color: inherit;
    text-decoration: none;
  }

  .text {
    flex-grow: 1;

    h3,
    h4 {
      margin: 0 0 0.15em;
    }

    span {
      //opacity: 0.7;
    }
  }

  .arrow {
    transition: transform 0.2s var(--ease-out-cubic);
    white-space: nowrap;
  }

  &:hover,
  &:focus-visible {
    box-shadow: 0 1px 12px var(--color-shadow-1),
      inset 0 0 2px 0.75px var(--color-border-2),
      inset 0 0 0 0.75px var(--color-border-active);
    outline: none;

    //.text {
    //  span {
    //    //opacity: 0.9;
    //    //text-decoration: underline;
    //  }
    //}

    .arrow {
      transform: translateX(4px);
    }
  }

  &.prev {
    order: 1;

    @include mixins.above-large {
      order: initial;
    }

    .text {
      text-align: right;
    }

    &:hover,
    &:focus-visible {
      .arrow {
        transform: translateX(-4px);
      }
    }
  }
}

